@@ -32,6 +32,7 @@ public class Run
 {
     public static void main(String[] argv) throws Exception
     {
+        runUpdate() ;
         arq.qexpr.main(new String[]{"64*1000*4e9/(3600*24*365*1000)"} );
         System.exit(0) ;
         
@@ -154,7 +155,7 @@ public class Run
     
     private static void runUpdate()
     {
-        String a[] = {"--update=update.ru"} ;
+        String a[] = {"--desc=etc/graphstore.ttl", "--update=update.ru", "--dump"} ;
         arq.update.main(a) ;
         System.exit(0) ;
     }
