@@ -6,24 +6,33 @@
 
 package com.hp.hpl.jena.sparql.core.assembler;
 
-import com.hp.hpl.jena.assembler.JA;
-import com.hp.hpl.jena.rdf.model.Property;
+import com.hp.hpl.jena.assembler.Assembler;
+import com.hp.hpl.jena.assembler.Mode;
 import com.hp.hpl.jena.rdf.model.Resource;
-import com.hp.hpl.jena.rdf.model.ResourceFactory;
 
-public class DatasetAssemblerVocab
+import com.hp.hpl.jena.query.DataSource;
+
+import com.hp.hpl.jena.update.GraphStore;
+import com.hp.hpl.jena.update.GraphStoreFactory;
+
+public class GraphStoreAssembler extends DataSourceAssembler
 {
-    public static final String NS = JA.getURI() ;
-    public static String getURI() { return NS ; }
+    public static Resource getType() { return DatasetAssemblerVocab.tGraphStore ; }
     
-    public static final Resource tDataset            = ResourceFactory.createResource(NS+"RDFDataset") ;
-    public static final Resource tGraphStore         = ResourceFactory.createResource(NS+"GraphStore") ;
-    public static final Property pDefaultGraph       = ResourceFactory.createProperty(NS, "defaultGraph") ;
-    public static final Property pNamedGraph         = ResourceFactory.createProperty(NS, "namedGraph") ;
-    
-    public static final Property pGraphName          = ResourceFactory.createProperty(NS, "graphName") ;
-    public static final Property pGraph              = ResourceFactory.createProperty(NS, "graph") ;
-    public static final Property pGraphAlt           = ResourceFactory.createProperty(NS, "graphData") ;
+    public Object open(Assembler a, Resource root, Mode mode)
+    {
+        // Same vocabulary as datasets.
+        // Have dispatched on type buy now so can just call the dataset code to build a DataSource.
+        
+        GraphStore gs = null ;
+        Object ds = super.open(a, root, mode) ;
+        if ( ds instanceof DataSource )
+            gs = GraphStoreFactory.create((DataSource)ds) ;
+        else
+            throw new DatasetAssemblerException(root, "Not a graph store") ;
+            
+        return gs ; 
+    }
 }
 
 /*
