@@ -1,7 +1,17 @@
 PREFIX : <http://example/>
 
+
+
 INSERT
 { 
   :x :p :q .
   :x2 :p :q 
+}
+
+# CREATE GRAPH :graph1
+
+INSERT INTO :graph1
+{ 
+  :y :p :q .
+  :y2 :p :q 
 }
